[package]
name = "airquality-sql"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
arrow = "53.1.0"
async-trait = "0.1.83"
datafusion = "42.0.0"
directories = "5.0.1"
jiff = { version = "0.1.13", features = ["serde"]}
reqwest = { version = "0.12.8", default-features = false, features = ["charset", "json", "http2", "rustls-tls-webpki-roots"]}
rustyline = { version = "14.0.0", default-features = false, features = ["with-file-history"]}
serde = { version = "1.0.210", features = ["derive"] }
serde_tuple = "1.0.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "sync"] }
