[package]
name = "airquality-sql"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.91"
arrow = "53.2.0"
async-trait = "0.1.83"
datafusion = { version = "42.1.0", default-features = false, features = ["nested_expressions"] }
directories = "5.0.1"
futures = "0.3.31"
jiff = { version = "0.1.13", features = ["serde"]}
regex = "1.11.1"
reqwest = { version = "0.12.9", default-features = false, features = ["charset", "json", "http2", "rustls-tls-webpki-roots"]}
rustyline = { version = "14.0.0", default-features = false, features = ["with-file-history"]}
serde = { version = "1.0.214", features = ["derive"] }
serde_tuple = "1.0.0"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread", "sync"] }

[dev-dependencies]
serde_json = "1.0.132"

[lints.rust]
rust_2018_idioms = { level ="deny", priority = -1 }
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
unreachable_pub = "deny"
unused_crate_dependencies = "deny"

[lints.clippy]
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
explicit_iter_loop = "deny"
future_not_send = "deny"
todo = "deny"
use_self = "deny"

[lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
